Fix: 카테고리 리스트 조회 기능 수정